--- a/src/component/PDFJS.css
+++ b/src/component/PDFJS.css
@@ -2,7 +2,7 @@
     min-height: 100vh;
   }
 body {
-  background-color: #808080;
+  background-color: rgb(42 42 46);
   margin: 0;
   padding: 0;
 }
@@ -13,9 +13,96 @@ body {
   height: 100%;
 }
 
-.navigation-buttons{
+/* .navigation-buttons{
     position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
+} */
+.toolbar{
+  position: fixed;
+  top: 0;
+  inset-inline: 0;
+  z-index: 9999;
+  cursor: default;
+  font: message-box;
+  background: rgb(56 56 61);
 }
+.toolbarContainer{
+  position: relative;
+  height: 32px;
+}
+#toolbarViewer{
+  height: 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+#toolbarViewerLeft{
+  float: inline-start;
+  margin-left: .2rem;
+  display: flex;
+}
+
+.normalized-btn{
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.splitToolbarButtonSeparator{
+  margin: 4px 0;
+  width: 1px;
+  height: 20px;
+  background: rgb(0 0 0 / 0.3);
+}
+.toolbarButtonSpacer{
+  width: 30px;
+  display: inline-block;
+  height: 1px;
+}
+.toolbarLabel{
+  min-width: 16px;
+  padding: 7px;
+  margin: 2px;
+  border-radius: 2px;
+  font-size: 12px;
+  line-height: 14px;
+  text-align: left;
+  user-select: none;
+  cursor: default;
+}
+#pageNumber{
+  -moz-appearance: textfield;
+  text-align: end;
+  width: 40px;
+  background-size: 0 0;
+  transition-property: none;
+}
+.toolbarField{
+  padding: 4px 7px;
+  margin: 3px 0;
+  border-radius: 2px;
+  background-color: rgb(64, 64, 84);
+  background-clip: padding-box;
+  border: 1px solid rgb(115, 115, 115);
+  box-shadow: none;
+  color:rgb(250, 250, 250);
+  font-size: 12px;
+  line-height: 16px;
+  outline: none;
+}
+
+#toolbarViewerMiddle{
+  display: flex;
+}
+.toolbarButton > span {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  overflow: hidden;}
